src/objects/Application__c.object
<CustomObject>
    <description>Applications for Ecosystem</description>
    <fields>
        <fullName>ApplicationName__c</fullName>
        <label>Application Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ApplicationURL__c</fullName>
        <label>Application URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <picklist>
            <picklistValues>
                <fullName>Business Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Document/File Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ethics &amp; Compliance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HR / People / Training</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Legal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Office of Risk Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Procurement (incl Subs)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Resilience</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Safety</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Travel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>ImageName__c</fullName>
        <label>Image Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MobileEnabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mobile Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NetworkRequirement__c</fullName>
        <label>Network Requirement</label>
        <picklist>
            <picklistValues>
                <fullName>Internet</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>AWAN</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Application</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>ApplicationName__c</columns>
        <columns>Category__c</columns>
        <columns>NetworkRequirement__c</columns>
        <columns>ApplicationURL__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All Applications</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Search_By_App_Name</fullName>
        <columns>NAME</columns>
        <columns>ApplicationName__c</columns>
        <columns>ApplicationURL__c</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ApplicationName__c</field>
            <operation>equals</operation>
            <value>The Sourse</value>
        </filters>
        <label>Search By App Name</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>APP-{000000000}</displayFormat>
        <label>Application Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Applications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>